od izomorfizom do predzadnje naloge sudoka

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,6 @@
 			]
 		}
 	},
-	"remoteUser": "opam"
+	"remoteUser": "opam",
+	"postCreateCommand": "/home/opam/venv/bin/python3 -m pip install -U pip && /home/opam/venv/bin/pip install sphinx-proof"
 }
